feat: added svg icons and simplified anim

--- a/index.html
+++ b/index.html
@@ -61,6 +61,13 @@
                     <p class="bio">Experienced AI/ML Practitioner with expertise in NLP and GenAI systems.</p>
                 </div>
 
+                <div class="skills-section">
+                    <div class="skills-separator"></div>
+                    <div class="skills-grid" id="skillsGrid">
+                        <!-- Skills will be dynamically populated here -->
+                    </div>
+                </div>
+
                 <div class="social-links">
                     <a href="https://www.linkedin.com/in/joashalonso/" target="_blank" class="social-icon">
                         <i class="fab fa-linkedin"></i>
@@ -98,6 +105,7 @@
     <div class="mobile-timeline-line"></div>
 
     <!-- Custom Scripts -->
+    <script src="js/asset-mapping.js"></script>
     <script src="js/network-graph.js"></script>
     <script src="js/yaml-loader.js"></script>
     <script src="js/timeline.js"></script>
